[함승호] Liquid 기능 추가, Materials폴더, Resources 폴더 추가

--- a/RPG_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RPG_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -217,7 +217,7 @@ MoviePipelineInProcessExecutorSettings=GameMapsSettings.DefaultModes.SelectedGam
 WaterRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.원격 빌드 옵션,
 WaterEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.원격 빌드 옵션,
 PostProcessComponent=PostProcessComponent.PostProcessVolume.Lens,PostProcessComponent.PostProcessVolume.Lens
-MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
 MaterialInstanceConstant=
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,
 NPC_C=
@@ -225,10 +225,12 @@ BoxComponent=BoxComponent.Collision.Collision,
 CapsuleComponent=
 ThirdPersonCharacter_C=CapsuleComponent.Collision.Collision,
 RPGGameMode_C=
-BP_Character_C=
+BP_Character_C=K2Node_VariableGet.DefaultValueCategory.None,
+WBP_InGame_C=
+HeadsUpDisplay_C=
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Scene
+ContentBrowserTab1.SelectedPaths=/Game/Materials
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
@@ -266,13 +268,13 @@ LastLevel=/Game/Scene/Test_Scene
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Character/BP_Character.BP_Character
-OpenAssetsAtExit=/Game/Blueprints/Character/NPC/BP_NPC.BP_NPC
-OpenAssetsAtExit=/Game/Blueprints/Interface/InteractInterface.InteractInterface
 OpenAssetsAtExit=/Game/UI/NPC_Interact/HeadsUpDisplay.HeadsUpDisplay
-OpenAssetsAtExit=/Game/Blueprints/GameMode/RPGGameMode.RPGGameMode
+OpenAssetsAtExit=/Game/UI/Liquid/WBP_Liquid.WBP_Liquid
+OpenAssetsAtExit=/Game/Materials/M_Liquid.M_Liquid
+OpenAssetsAtExit=/Game/Materials/M_Liquid_Inst.M_Liquid_Inst
 
 [PluginBrowser]
+InstalledPlugins=NinjaCharacter
 InstalledPlugins=XRVisualization
 
 [DetailCategories]
@@ -1255,7 +1257,7 @@ UITest_Title_C.Tick=True
 UITest_Title_C.Replication=True
 UITest_Title_C.Actor=True
 UITest_Title_C.Input=True
-K2Node_VariableSet.Variable=True
+K2Node_VariableSet.Variable=False
 K2Node_VariableSet.DefaultValueCategory=True
 ThirdPersonCharacter_C.Default=True
 ThirdPersonCharacter_C.Tick=True
@@ -1451,6 +1453,66 @@ UITest_ShowTest_C.Input=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
 K2Node_InputAction.Input=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+BP_NPC_C.TransformCommon=True
+HeadsUpDisplay_C.Appearance=True
+HeadsUpDisplay_C.Designer=True
+HeadsUpDisplay_C.Input=True
+HeadsUpDisplay_C.Interaction=True
+HeadsUpDisplay_C.Performance=True
+HeadsUpDisplay_C.Layout=True
+HeadsUpDisplay_C.Behavior=True
+HeadsUpDisplay_C.Render Transform=True
+HeadsUpDisplay_C.Accessibility=True
+HeadsUpDisplay_C.Clipping=True
+HeadsUpDisplay_C.Navigation=True
+HeadsUpDisplay_C.Localization=True
+InteractMessage_C.Appearance=True
+InteractMessage_C.Input=True
+InteractMessage_C.Accessibility=True
+InteractMessage_C.Interaction=True
+InteractMessage_C.Behavior=True
+InteractMessage_C.Render Transform=True
+InteractMessage_C.Performance=True
+InteractMessage_C.Clipping=True
+InteractMessage_C.Navigation=True
+InteractMessage_C.Localization=True
+SizeBox.Child Layout=True
+SizeBox.Accessibility=True
+SizeBox.Behavior=True
+SizeBox.Render Transform=True
+SizeBox.Performance=True
+SizeBox.Clipping=True
+SizeBox.Navigation=True
+SizeBox.Localization=True
+InteractMessage_C.Designer=True
+InteractMessage_C.Layout=True
+InteractMessage_C.Default=True
+HeadsUpDisplay_C.Default=True
+MaterialExpressionTime.MaterialExpressionTime=True
+MaterialExpressionTime.MaterialExpression=True
+MaterialExpressionStaticSwitchParameter.General=True
+MaterialExpressionStaticSwitchParameter.MaterialExpressionStaticBoolParameter=True
+MaterialExpressionStaticSwitchParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+MaterialExpressionComment.MaterialExpressionComment=True
+MaterialExpressionComment.MaterialExpression=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1473,19 +1535,34 @@ WaterEditorSettings="\"Object.ActorDefaults.WaterBodyLakeDefaults.WaterWaves.Obj
 DirectionalLightComponent="\"Object.Light.ModulatedShadowColor\" \"Object.Light.LightingChannels\" \"Object.LightShafts.BloomTint\" \"Object.AtmosphereAndCloud.AtmosphereSunDiskColorScale\" \"Object.AtmosphereAndCloud.CloudScatteredLuminanceScale\" "
 LightComponent="\"Object.Light.ModulatedShadowColor\" \"Object.Light.LightingChannels\" \"Object.LightShafts.BloomTint\" \"Object.AtmosphereAndCloud.AtmosphereSunDiskColorScale\" \"Object.AtmosphereAndCloud.CloudScatteredLuminanceScale\" "
 LightComponentBase="\"Object.Light.ModulatedShadowColor\" \"Object.Light.LightingChannels\" \"Object.LightShafts.BloomTint\" \"Object.AtmosphereAndCloud.AtmosphereSunDiskColorScale\" \"Object.AtmosphereAndCloud.CloudScatteredLuminanceScale\" "
-SceneComponent=
-ActorComponent=
+SceneComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ActorComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
 Info="\"Object.HeadsUpDisplay\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+StreamableRenderAsset=
 TextRenderComponent="\"Object.Text.TextRenderColor\" "
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 BoxComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-ShapeComponent=
+ShapeComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 NPC_C=
 RPGGameMode_C="\"Object.HeadsUpDisplay\" "
 GameModeBase="\"Object.HeadsUpDisplay\" "
+Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.Margin\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+Widget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+Visual="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+PanelWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+WBP_InGame_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+UserWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+HeadsUpDisplay_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+Border="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+ContentWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+InteractMessage_C=
+SizeBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+TextBlock="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+TextLayoutWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[2].Parameters.Parameters[0].Object.ParameterValue\" "
 
 [PathColor]
 /Game/Graphic_BP_Resource=(R=1.000000,G=0.503047,B=0.776569,A=1.000000)
@@ -1564,7 +1641,7 @@ UdpMessagingSettings=True
 WmfMediaSettings=True
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
+ScreenPosition=X=205.000 Y=98.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -2494,26 +2571,26 @@ NewLevelDialog.TimeStamp=2021.12.22-13.21.14
 NewLevelDialog.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Scene/Test_Scene
-MRUItem1=/Game/Scene/UITest/UITest_ShowTest
-MRUItem2=/Game/Blueprints/GameMode/RPGGameMode
-MRUItem3=/Game/UI/NPC_Interact/HeadsUpDisplay
-MRUItem4=/Game/Blueprints/Interface/InteractInterfaced
-MRUItem5=/Game/Blueprints/Character/NPC/BP_NPC
-MRUItem6=/Game/Blueprints/Character/NPC
-MRUItem7=/Game/Blueprints/Character/BP_Character
-MRUItem8=/Game/Blueprints/Interface/NPC_Interact
-MRUItem9=/Game/Default_Assets/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem10=/Game/Blueprints/RPGGameMode
-MRUItem11=/Game/Scene/UITest/UITest_Title
-MRUItem12=/Game/Scene/UITest/UITestMap_InGame
-MRUItem13=/Game/Scene/UITest/UITestMap_Title
-MRUItem14=/Game/UI/WBP_Main
-MRUItem15=/Game/UI/WBP_InGame
-MRUItem16=/Game/Scene/UITest/UITestMap
-MRUItem17=/Game/Scene/Day/Day_01_Scene
-MRUItem18=/Game/Graphic_BP_Resource/01_Sky_System/BP_Skysystem_Stage_01
-MRUItem19=/Game/Graphic_BP_Resource/01_Sky_System/BP_Skysystem_Night_01
+MRUItem0=/Game/UI/Liquid/M_Liquid_Inst
+MRUItem1=/Game/UI/Liquid/MI_Liquid
+MRUItem2=/Game/UI/Liquid/M_Liquid
+MRUItem3=/Game/UI/WBP_Liquid
+MRUItem4=/Game/UI/NPC_Interact/HeadsUpDisplay
+MRUItem5=/Game/UI/NPC_Interact/InteractMessage
+MRUItem6=/Game/Blueprints/Character/BP_Character
+MRUItem7=/Game/Blueprints/Character/NPC/BP_NPC
+MRUItem8=/Game/Resources/UI/LiquidHeart/M_LiquidHealth
+MRUItem9=/Game/Resources/ExperiencevalueBar
+MRUItem10=/Game/UI/WBP_InGame
+MRUItem11=/Game/Scene/UITest/UITest_ShowTest
+MRUItem12=/Game/Scene/Test_Scene
+MRUItem13=/Game/Blueprints/GameMode/RPGGameMode
+MRUItem14=/Game/Blueprints/Interface/InteractInterfaced
+MRUItem15=/Game/Blueprints/Character/NPC
+MRUItem16=/Game/Blueprints/Interface/NPC_Interact
+MRUItem17=/Game/Default_Assets/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem18=/Game/Blueprints/RPGGameMode
+MRUItem19=/Game/Scene/UITest/UITest_Title
 
 [Python]
 LastDirectory=
@@ -2566,6 +2643,7 @@ WorldSettings.LODSystem=True
 WorldSettings.Physics=True
 WorldSettings.Lightmass=True
 StaticMesh.LODCustomMode=False
+PreviewMaterial.Material=True
 
 [AssetEditorToolkitTabLocation]
 /Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere=1
@@ -2611,8 +2689,11 @@ StaticMesh.LODCustomMode=False
 /Game/Blueprints/Character/NPC/BP_NPC.BP_NPC=0
 /Game/Scene/Test_Scene.Test_Scene:PersistentLevel.Test_Scene=0
 /Game/Scene/UITest/UITest_ShowTest.UITest_ShowTest:PersistentLevel.UITest_ShowTest=0
+/Game/Resources/ExperiencevalueBar.ExperiencevalueBar=0
+/Game/Resources/UI/LiquidHeart/M_LiquidHealth.M_LiquidHealth=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Character/NPC/BP_NPC.BP_NPC;
 RecentlyPlaced=/Game/Blueprints/Character/NPC.NPC;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Default_Assets/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
@@ -2632,7 +2713,6 @@ RecentlyPlaced=/Game/Graphic_BP_Resource/01_Sky_System/BP_Skysystem_Day_01.BP_Sk
 RecentlyPlaced=/Game/Graphic_BP_Resource/02_HDRI/BP_Day_01_HDRI.BP_Day_01_HDRI;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Graphic_Test_Resource/01_Sky_System/BP_Skysystem.BP_Skysystem;
 
 [SuppressableDialogs]
 Warning_CompileErrorsInMaterial=False
