[아트 / 김준형] 폴더 정리2

--- a/RPG_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RPG_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -294,7 +294,7 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/Scene/Day/Day_01_Scene
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [PluginBrowser]
 InstalledPlugins=NinjaCharacter
