[프밍 / 함승호 ] C++폴더, MyCharacter 생성

--- a/RPG_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RPG_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -234,7 +234,7 @@ BP_Day_01_HDRI_C=PostProcessComponent.PostProcessVolume.Lens,
 BP_Sky_Sphere_C=CapsuleComponent.Collision.Collision,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Assets_Store
+ContentBrowserTab1.SelectedPaths=/Game/Default_Assets
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
@@ -294,7 +294,7 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/Scene/Day/Day_01_Scene
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [PluginBrowser]
 InstalledPlugins=NinjaCharacter
@@ -1751,7 +1751,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../NoName_Project/RPG_Project/Content/Scene/Day
+UNR=../../../../../UnrealEngineProject/RPG_Project/RPG_Project/Content/Scene/Day
 BRUSH=../../../../../NoName_Project/RPG_Project/Content/
 FBX=../../../../../NoName_Project/RPG_Project/Content/
 FBXAnim=../../../../../NoName_Project/RPG_Project/Content/
@@ -2669,6 +2669,8 @@ AnimationEditor.TimeStamp=2021.05.26-14.57.45
 AnimationEditor.LastCompileMethod=Unknown
 PhysicsAssetEditor.TimeStamp=2021.05.26-14.57.58
 PhysicsAssetEditor.LastCompileMethod=Unknown
+RPG_Project.TimeStamp=2022.06.27-11.50.07
+RPG_Project.LastCompileMethod=External
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/Character/BP_Character
