--- a/RPG_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RPG_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -126,14 +126,14 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Scene/Day/Day_01_Scene
-MRUItem1=/Game/Scene/Night/Night_01_Scene
-MRUItem2=/Game/Scene/Test_Scene
-MRUItem3=/Game/Scene/Night/Night_02_Scene
-MRUItem4=/Game/Scene/Battlemap/Stage_01_Scene
-MRUItem5=/Game/Scene/Sunset/Sunset_02_Scene
-MRUItem6=/Game/Scene/Sunset/Sunset_01_Scene
-MRUItem7=/Game/Scene/Day/Day_02_Scene
+MRUItem0=/Game/Scene/Sunset/Sunset_02_Scene
+MRUItem1=/Game/Scene/Sunset/Sunset_01_Scene
+MRUItem2=/Game/Scene/Night/Night_02_Scene
+MRUItem3=/Game/Scene/Day/Day_02_Scene
+MRUItem4=/Game/Scene/Night/Night_01_Scene
+MRUItem5=/Game/Scene/Day/Day_01_Scene
+MRUItem6=/Game/Scene/Battlemap/Stage_01_Scene
+MRUItem7=/Game/Scene/Test_Scene
 MRUItem8=/Game/Scene/UITest/UITest_ShowTest
 MRUItem9=/Game/Scene/UITest/UITest_Title
 MRUItem10=/Game/Scene/UITest/UITestMap_Title
@@ -291,10 +291,10 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Scene/Day/Day_01_Scene
+LastLevel=/Game/Scene/Sunset/Sunset_02_Scene
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [PluginBrowser]
 InstalledPlugins=NinjaCharacter
@@ -2669,30 +2669,30 @@ AnimationEditor.TimeStamp=2021.05.26-14.57.45
 AnimationEditor.LastCompileMethod=Unknown
 PhysicsAssetEditor.TimeStamp=2021.05.26-14.57.58
 PhysicsAssetEditor.LastCompileMethod=Unknown
-RPG_Project.TimeStamp=2022.06.27-11.50.07
+RPG_Project.TimeStamp=2022.06.27-12.11.56
 RPG_Project.LastCompileMethod=External
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Character/BP_Character
-MRUItem1=/Game/Scene/Night/Night_01_Scene
-MRUItem2=/Game/Scene/Day/Day_01_Scene
-MRUItem3=/Game/Scene/Test_Scene
-MRUItem4=/Game/Scene/Night/Night_02_Scene
-MRUItem5=/Game/Graphic_Test_Resource/NewMaterial
-MRUItem6=/Game/Default_Assets/Mannequin/Animations/ThirdPersonJump_End
-MRUItem7=/Game/Default_Assets/Mannequin/Animations/ThirdPersonIdle
-MRUItem8=/Game/Default_Assets/Mannequin/Animations/ThirdPersonJump_Loop
-MRUItem9=/Game/Default_Assets/Mannequin/Animations/ThirdPerson_Jump
-MRUItem10=/Game/Default_Assets/Mannequin/Animations/ThirdPerson_AnimBP
-MRUItem11=/Game/Default_Assets/Mannequin/Character/Mesh/SK_Mannequin_PhysicsAsset
-MRUItem12=/Game/Default_Assets/Mannequin/Animations/ThirdPerson_IdleRun_2D
-MRUItem13=/Game/Default_Assets/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
-MRUItem14=/Game/Default_Assets/Mannequin/Character/Mesh/SK_Mannequin
-MRUItem15=/Game/Graphic_BP_Resource/01_Sky_System/BP_Skysystem_Day_01
-MRUItem16=/Game/Scene/Battlemap/Stage_01_Scene
-MRUItem17=/Game/Scene/Sunset/Sunset_02_Scene
-MRUItem18=/Game/Scene/Sunset/Sunset_01_Scene
-MRUItem19=/Game/Scene/Day/Day_02_Scene
+MRUItem0=/Game/Scene/Sunset/Sunset_02_Scene
+MRUItem1=/Game/Scene/Sunset/Sunset_01_Scene
+MRUItem2=/Game/Scene/Night/Night_02_Scene
+MRUItem3=/Game/Scene/Day/Day_02_Scene
+MRUItem4=/Game/Scene/Night/Night_01_Scene
+MRUItem5=/Game/Scene/Day/Day_01_Scene
+MRUItem6=/Game/Scene/Battlemap/Stage_01_Scene
+MRUItem7=/Game/Blueprints/Character/BP_Character
+MRUItem8=/Game/Scene/Test_Scene
+MRUItem9=/Game/Graphic_Test_Resource/NewMaterial
+MRUItem10=/Game/Default_Assets/Mannequin/Animations/ThirdPersonJump_End
+MRUItem11=/Game/Default_Assets/Mannequin/Animations/ThirdPersonIdle
+MRUItem12=/Game/Default_Assets/Mannequin/Animations/ThirdPersonJump_Loop
+MRUItem13=/Game/Default_Assets/Mannequin/Animations/ThirdPerson_Jump
+MRUItem14=/Game/Default_Assets/Mannequin/Animations/ThirdPerson_AnimBP
+MRUItem15=/Game/Default_Assets/Mannequin/Character/Mesh/SK_Mannequin_PhysicsAsset
+MRUItem16=/Game/Default_Assets/Mannequin/Animations/ThirdPerson_IdleRun_2D
+MRUItem17=/Game/Default_Assets/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
+MRUItem18=/Game/Default_Assets/Mannequin/Character/Mesh/SK_Mannequin
+MRUItem19=/Game/Graphic_BP_Resource/01_Sky_System/BP_Skysystem_Day_01
 
 [Python]
 LastDirectory=
@@ -2802,6 +2802,18 @@ PreviewMaterial.Material=True
 /Game/Graphic_Test_Resource/NewMaterial.NewMaterial=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/Graphic_Blueprint/02_HDRI/BP_Sunset_02_HDRI.BP_Sunset_02_HDRI;
+RecentlyPlaced=/Game/Graphic_Blueprint/01_Sky_System/BP_Skysystem_Sunset_02.BP_Skysystem_Sunset_02;
+RecentlyPlaced=/Game/Graphic_Blueprint/02_HDRI/BP_Sunset_01_HDRI.BP_Sunset_01_HDRI;
+RecentlyPlaced=/Game/Graphic_Blueprint/01_Sky_System/BP_Skysystem_Sunset_01.BP_Skysystem_Sunset_01;
+RecentlyPlaced=/Game/Graphic_Blueprint/02_HDRI/BP_Night_02_HDRI.BP_Night_02_HDRI;
+RecentlyPlaced=/Game/Graphic_Blueprint/01_Sky_System/BP_Skysystem_Night_02.BP_Skysystem_Night_02;
+RecentlyPlaced=/Game/Graphic_Blueprint/02_HDRI/BP_Night_01_HDRI.BP_Night_01_HDRI;
+RecentlyPlaced=/Game/Graphic_Blueprint/01_Sky_System/BP_Skysystem_Night_01.BP_Skysystem_Night_01;
+RecentlyPlaced=/Game/Graphic_Blueprint/02_HDRI/BP_Day_02_HDRI.BP_Day_02_HDRI;
+RecentlyPlaced=/Game/Graphic_Blueprint/01_Sky_System/BP_Skysystem_Day_02.BP_Skysystem_Day_02;
+RecentlyPlaced=/Game/Graphic_Blueprint/02_HDRI/BP_Stage_01_HDRI.BP_Stage_01_HDRI;
+RecentlyPlaced=/Game/Graphic_Blueprint/01_Sky_System/BP_Skysystem_Stage_01.BP_Skysystem_Stage_01;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Blueprints/Character/NPC/BP_NPC.BP_NPC;
 RecentlyPlaced=/Game/Blueprints/Character/NPC.NPC;
@@ -2810,18 +2822,6 @@ RecentlyPlaced=/Game/Default_Assets/ThirdPersonBP/Blueprints/ThirdPersonCharacte
 RecentlyPlaced=/Game/Graphic_BP_Resource/01_Sky_System/BP_Skysystem_Sunset_02.BP_Skysystem_Sunset_02;
 RecentlyPlaced=/Game/Graphic_BP_Resource/02_HDRI/BP_Sunset_02_HDRI.BP_Sunset_02_HDRI;
 RecentlyPlaced=/Game/Graphic_BP_Resource/02_HDRI/BP_Sunset_01_HDRI.BP_Sunset_01_HDRI;
-RecentlyPlaced=/Game/Graphic_BP_Resource/01_Sky_System/BP_Skysystem_Sunset_01.BP_Skysystem_Sunset_01;
-RecentlyPlaced=/Game/Graphic_BP_Resource/01_Sky_System/BP_Skysystem_Stage_01.BP_Skysystem_Stage_01;
-RecentlyPlaced=/Game/Graphic_BP_Resource/02_HDRI/BP_Stage_01_HDRI.BP_Stage_01_HDRI;
-RecentlyPlaced=/Game/Graphic_BP_Resource/02_HDRI/BP_Night_02_HDRI.BP_Night_02_HDRI;
-RecentlyPlaced=/Game/Graphic_BP_Resource/01_Sky_System/BP_Skysystem_Night_02.BP_Skysystem_Night_02;
-RecentlyPlaced=/Game/Graphic_BP_Resource/02_HDRI/BP_Night_01_HDRI.BP_Night_01_HDRI;
-RecentlyPlaced=/Game/Graphic_BP_Resource/01_Sky_System/BP_Skysystem_Night_01.BP_Skysystem_Night_01;
-RecentlyPlaced=/Game/Graphic_BP_Resource/01_Sky_System/BP_Skysystem_Day_02.BP_Skysystem_Day_02;
-RecentlyPlaced=/Game/Graphic_BP_Resource/02_HDRI/BP_Day_02_HDRI.BP_Day_02_HDRI;
-RecentlyPlaced=/Game/Graphic_BP_Resource/01_Sky_System/BP_Skysystem_Day_01.BP_Skysystem_Day_01;
-RecentlyPlaced=/Game/Graphic_BP_Resource/02_HDRI/BP_Day_01_HDRI.BP_Day_01_HDRI;
-RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 
 [SuppressableDialogs]
 Warning_CompileErrorsInMaterial=False
